[package]
  name = "ovation"
  version = "0.1.0"
  description = "A dispatch layer for clap that statically binds Subcommand variants to typed handler functions"

  edition = "2024"
  rust-version = "1.91.1"

  readme = "README.md"
  homepage = "https://github.com/HarmonyWebchat/ovation"
  repository = "https://github.com/HarmonyWebchat/ovation"
  keywords = ["clap", "cli", "dispatch", "delegate", "parser"]
  categories = ["command-line-utilities", "command-line-interface"]

  metadata.flux.enabled = true

[dependencies]
  clap = { version = "4.6.1", features = ["cargo", "derive"] }
  either = "1.16.0"

  [dependencies.flux-rs]
    git = "https://github.com/flux-rs/flux.git"
    rev = "7c5cbe71b819ff77c81f3e5283dfb5d18f52669c"

