[package]
  name = "ovation"
  version = "1.0.0"
  description = "A dispatch layer for clap that statically binds Subcommand variants to typed handler functions"

  edition = "2024"
  rust-version = "1.91.1"

  license = "MIT"
  readme = "README.md"
  homepage = "https://github.com/HarmonyWebchat/ovation"
  repository = "https://github.com/HarmonyWebchat/ovation"
  keywords = ["clap", "cli", "dispatch", "delegate", "parser"]
  categories = ["command-line-utilities", "command-line-interface"]

  metadata.flux.enabled = true

[dependencies]
  clap = { version = "4.6.1", features = ["cargo", "derive"] }
  either = "1.16.0"

